# halluguard

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  demo_hallucination.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  test-action.yml
api/: server.py
cli/: analyzer.py
core/: pipeline.py
core/corrector/: __init__.py  suggestion_engine.py
core/parser/: __init__.py  js_parser.py  python_parser.py
core/rwkv_engine/: __init__.py  inference.py  model_loader.py  router.py
core/scorer/: __init__.py  hallucination_scorer.py
core/verifier/: __init__.py  npm_verifier.py  pypi_verifier.py
docs/: architecture.md  plan_detaille.md  scope.md
github-action/: action.yml  package-lock.json  package.json  tsconfig.json
github-action/src/: analyzer.ts  main.ts  reporter.ts
path/to/your/: file.py
tests/: test_corrector.py  test_js_parser.py  test_npm_verifier.py  test_pipeline.py  test_pypi_verifier.py  test_python_parser.py  test_scorer.py
vscode-extension/: README.md  halluguard-ai-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: analyzer.ts  decorations.ts  extension.ts  hover.ts  quickfix.ts
vscode-extension/src/test/suite/: extension.test.ts  index.ts
